--- a/.hintrc
+++ b/.hintrc
@@ -9,6 +9,15 @@
         "button-name": "off"
       }
     ],
-    "button-type": "off"
+    "button-type": "off",
+    "compat-api/css": [
+      "default",
+      {
+        "ignore": [
+          "-webkit-mask-image",
+          "-webkit-mask-size"
+        ]
+      }
+    ]
   }
 }
